@@ -23,6 +23,7 @@
 ; string[arg0]	== (char *)			[same as string[retval]]
 ; string[N]     == (char *)             [N>0]   [show only up to N bytes]
 ; ignore	== (any)			[ignore arg, output blank]
+; type*		== (type *)			[pointer to any other type]
 
 ; Backwards-compatibility:
 ; string0	== (char *)			[same as string[retval]]
@@ -77,7 +78,7 @@ int open64(string,int,octal);		; WARNING: 3rd argument may not be there
 int fnmatch(string, string, int);
 
 ; getopt.h
-int getopt_long(int,addr,string,addr,addr);
+int getopt_long(int,addr,string,addr,int*);
 int getopt_long_only(int,addr,string,addr,addr);
 
 ; grp.h
